--- a/war/GRGContactDemo.html
+++ b/war/GRGContactDemo.html
@@ -53,7 +53,8 @@
       </tr>
       <tr>
         <td id="nameFieldContainer"></td>
-        <td id="sendButtonContainer"></td>
+		<td id="sendButtonContainer"></td>
+        <td id="demoButtonContainer"></td>
       </tr>
       <tr>
         <td colspan="2" style="color:red;" id="errorLabelContainer"></td>
