--- a/trunk/war/GRGContactDemo.html
+++ b/trunk/war/GRGContactDemo.html
@@ -53,9 +53,12 @@
       </tr>
       <tr>
         <td id="nameFieldContainer"></td>
-		<td id="sendButtonContainer"></td>
-        <td id="demoButtonContainer"></td>
+		<td id="createButtonContainer"></td>
       </tr>
+	  <tr>
+	  <td id="descFieldContainer"></td>
+	  <td id="updateButtonContainer"></td>
+	  </tr>
       <tr>
         <td colspan="2" style="color:red;" id="errorLabelContainer"></td>
       </tr>
